# portfolio-monitor

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
config/: default.yaml
docs/: INPUT_FORMATS.md  REPORTS.md  USAGE.md
portfolio_monitor/: cli.py  config.py
portfolio_monitor/analysis/: __init__.py  engine.py
portfolio_monitor/importers/: __init__.py  csv_importer.py  excel_importer.py  loader.py  pdf_importer.py
portfolio_monitor/markets/: __init__.py  online.py
portfolio_monitor/storage/: __init__.py  db.py
scripts/: check_public_release.sh  run_daily.sh  run_monthly.sh
src/app/: __init__.py  cli.py  settings.py
src/app/analysis/: __init__.py  engine.py
src/app/domain/: __init__.py  models.py
src/app/ingestion/: __init__.py  csv_importer.py  excel_importer.py  loader.py  pdf_importer.py
src/app/market_data/: __init__.py  online.py
src/app/persistence/: __init__.py  db.py
src/app/reporting/: __init__.py  compact.py  html.py  markdown.py  serialization.py
tests/: test_import_and_analysis.py
